--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ data-raw/ibge/
 data-raw/microdata_14muni/
 data-raw/tabelas_municipios_areas_redefinidas_ods/
 data-raw/tabelas_municipios_areas_redefinidas_xls/
+census/
